<resources>

    <string name="app_name">MasterHelper</string>
    <string name="sharedPreferencesName">sPref</string>
    <string name="isFirstStartKey">isFirstStart</string>
    <string name="keyIdProject">projectId</string>
    <string name="keyProjectModel">projectModel</string>
    <string name="keyObjectModel">objectModel</string>

    <string name="commonData">Общие данные</string>
    <string name="masterDetails">Данные об исполнителе</string>
    <string name="clientDetails">Данные о заказчике</string>
    <string name="project">Проект</string>
    <string name="projects">Проекты</string>
    <string name="description">Описание</string>
    <string name="newProject">Новый проект</string>
    <string name="calculator">Калькулятор</string>
    <string name="contractDetails">Детали договора</string>
    <string name="estimate">Смета</string>
    <string name="jobs">Работы</string>
    <string name="prices">Цены</string>
    <string name="cart">Список покупок</string>
    <string name="materials">Материалы</string>
    <string name="projectInfo">Информация</string>
    <string name="projectObjects">Объекты</string>
    <string name="client">Заказчик</string>
    <string name="master">Исполнитель</string>
    <string name="archived">Завершенные проекты</string>

    <string name="nameEmptyMessage">Название не должно быть пустым</string>

    <string name="DataAutofill">Представленные данные будут использованы при автозаполнении для экономии вашего времени.</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">Ок</string>
    <string name="done">Готово</string>
    <string name="print">Печать</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="begin">Начать</string>
    <string name="save">Сохранить</string>
    <string name="add">Добавить</string>
    <string name="call">Позвонить</string>
    <string name="changeName">Изменить название</string>
    <string name="deleteProject">Удалить проект</string>
    <string name="sureForDeletingProject">Удалить проект?</string>
    <string name="finishProject">Завершить проект</string>

    <string name="projectName">Название проекта</string>
    <string name="projectDescription">Краткое описание работ</string>
    <string name="jobsDescription">Предмет договора, выполняемые работы</string>
    <string name="projectAddress">Адрес проведения работ</string>

    <string name="notComplete">Не выполнено</string>
    <string name="complete">Выполнено</string>
    <string name="notPurchased">Не приобретено</string>
    <string name="purchased">Приобретено</string>
    <string name="emptyDescription">Нет описания</string>
    <string name="emptyAddress">Адрес не указан</string>

    <string name="createJob">Создать работу</string>
    <string name="createMaterial">Создать материал</string>
    <string name="addJob">Добавить работу</string>
    <string name="editJob">Редактировать работу</string>
    <string name="jobName">Наименование работы</string>
    <string name="quantity">Количество</string>

    <string name="addMaterial">Добавить материал</string>
    <string name="editMaterial">Редактировать материал</string>
    <string name="materialName">Наименование материала</string>

    <string name="objectName">Наименование объекта</string>
    <string name="parentObjectIs">Родительский объект</string>
    <string name="addObject">Добавить объект</string>

    <string name="individual">Физ. лицо</string>
    <string name="organization">Организация</string>
    <string name="initials">ФИО</string>
    <string name="address">Адрес</string>
    <string name="zipcode">Почтовый индекс</string>
    <string name="phoneNumber">Номер телефона</string>
    <string name="passport">Номер паспорта</string>
    <string name="passportIssued">Орган, который выдал паспорт</string>
    <string name="insuranceCertificate">Номер страхового свидетельства</string>
    <string name="UNP">УНП</string>
    <string name="bankAccount">Расчетный счет</string>
    <string name="bankName">Банк, в котором заведен счет</string>
    <string name="bankCode">Код</string>
    <string name="bankAddress">Адрес банка</string>

    <string name="contractNumber">Номер договора</string>
    <string name="contractDate">Дата заключения договора</string>
    <string name="workStartDate">Дата начала работ</string>
    <string name="workEndDate">Дата окончания работ</string>
    <string name="workLength">Длительность работ (дней)</string>
    <string name="materialsSupplier">Поставщик материалов</string>
    <string name="prepayment">Аванс</string>
    <string name="ruble">(Рублей)</string>

    <string name="unitPrice">Цена за единицу</string>
    <string name="sum">Сумма</string>

    <string name="help">Помощь</string>

    <string-array name="jobUnits">
        <item>шт</item>
        <item>мм</item>
        <item>см</item>
        <item>м</item>
        <item>км</item>
        <item>мм²</item>
        <item>см²</item>
        <item>м²</item>
        <item>км²</item>
        <item>мм³</item>
        <item>см³</item>
        <item>м³</item>
        <item>км³</item>
        <item>мл</item>
        <item>л</item>
        <item>грамм</item>
        <item>кг</item>
        <item>тонн</item>
        <item>сек</item>
        <item>мин</item>
        <item>ч</item>
        <item>дн</item>
        <item>мес</item>
    </string-array>

    <string-array name="materialUnits">
        <item>шт</item>
        <item>мм</item>
        <item>см</item>
        <item>м</item>
        <item>км</item>
        <item>мм²</item>
        <item>см²</item>
        <item>м²</item>
        <item>км²</item>
        <item>мм³</item>
        <item>см³</item>
        <item>м³</item>
        <item>км³</item>
        <item>мл</item>
        <item>л</item>
        <item>гр</item>
        <item>кг</item>
        <item>тонн</item>
    </string-array>

    <string name="title_activity_object">ObjectActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

</resources>
